RESOLVED FIXED278574
Unified build fix for WritingTools
https://bugs.webkit.org/show_bug.cgi?id=278574
Summary Unified build fix for WritingTools
Ryosuke Niwa
Reported 2024-08-23 13:31:04 PDT
Header include WritingToolsTypes.h and UIKit.h to fix unified builds.
Attachments
Ryosuke Niwa
Comment 1 2024-08-23 13:32:55 PDT
EWS
Comment 2 2024-08-23 16:09:28 PDT
Committed 282679@main (75717bbd9c44): <https://commits.webkit.org/282679@main> Reviewed commits have been landed. Closing PR #32641 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-23 16:10:17 PDT
Note You need to log in before you can comment on or make changes to this bug.