Unified build fix for WritingTools https://bugs.webkit.org/show_bug.cgi?id=278574

Unreviewed build fix.

* Source/WebCore/PAL/pal/spi/cocoa/WritingToolsSPI.h:
* Source/WebKit/UIProcess/Cocoa/PlatformWritingToolsUtilities.h:

Canonical link: https://commits.webkit.org/282679@main